# Multi-agent-MCP

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Makefile  QUICK_START.md  README.md  README_MCP.md  cleanup.sh  docker-compose.dev.yml  docker-compose.yml  init.sql  mermaid_renderer.py  network_graph_renderer.py  pyproject.toml  streamlit_app.py  test_mermaid_integration.py  test_ws.py
docker/: Dockerfile.code  Dockerfile.code_analyst  Dockerfile.dev  Dockerfile.gateway  Dockerfile.graph  Dockerfile.graph_query  Dockerfile.indexer  Dockerfile.memory  Dockerfile.orchestrator  Dockerfile.streamlit  entrypoint.sh
docs/: API.md  ARCHITECTURE.md
frontend/: streamlit_app.py
scripts/: reindex_fastapi.py  setup.sh  start-dev.sh  start.sh  test.sh  verify_all_steps.sh
src/: __init__.py
src/agents/: __init__.py  code_analyst_agent.py  graph_query_agent.py  indexer_agent.py  indexer_agent.py.bak  orchestrator_agent.py  orchestrator_agent.py.bak
src/fastapi_multiagent_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gateway/: __init__.py  dependencies.py  main.py  mcp_client.py  models.py  websocket_manager.py
src/gateway/routes/: __init__.py  agentic_chat.py  analysis.py  chat.py  embeddings.py  graph_visualization.py  health.py  indexing.py  query.py  rag_chat.py  websocket.py
src/services/: __init__.py
src/services/code_analyst_service/: Dockerfile  __init__.py  main.py  service.py
src/services/code_analyst_service/handlers/: __init__.py  class_analysis.py  code_operations.py  function_analysis.py  patterns.py
src/services/graph_query_service/: Dockerfile  __init__.py  main.py  service.py
src/services/graph_query_service/handlers/: __init__.py  clear.py  comprehensive_entity_analysis_handler.py  dependencies.py  find_best_entity.py  find_entity.py  query_execution.py  relationships.py  semantic_search.py
src/services/indexer_service/: Dockerfile  __init__.py  main.py
src/services/indexer_service/handlers/: __init__.py  ast_utils.py  embeddings.py  index_repository.py  status.py
src/services/memory_service/: Dockerfile  __init__.py  main.py  service.py
src/services/memory_service/handlers/: __init__.py  context_handlers.py  response_handlers.py  session_handlers.py  turn_handlers.py
src/services/orchestrator_service/: Dockerfile  __init__.py  main.py  service.py
src/services/orchestrator_service/handlers/: __init__.py  agent_calls.py  mermaid.py  orchestration.py  parallel_search.py  routing.py  (+2 more)
src/shared/: __init__.py  ast_parser.py  base_agent.py  config.py  conversation_models.py  exceptions.py  logger.py  mcp_server.py  mcp_types.py  neo4j_service.py  pinecone_embeddings_service.py  postgres_client.py  redis_client.py  relationship_builder.py  relationship_mappings.py  repo_downloader.py
src/tests/: conftest.py  test_neo4j_service.py
