[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-multiagent-chat"
version = "1.0.0"
description = "Multi-agent system for FastAPI repository analysis using MCP"
authors = [
    {name = "AI Engineer", email = "engineer@example.com"}
]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pinecone>=3.0.0",
    "sentence-transformers>=2.2.2",
    "cohere>=4.0.0",
    # FastAPI & Web
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",           
    "wsproto>=1.2.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    # Graph Database
    "neo4j>=5.14.0",
    # Database - NEW
    "sqlalchemy>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    # Redis - NEW
    "redis>=5.0",
    "aioredis>=2.0",
    # AST & Code Parsing
    "pygments>=2.16.0",
    # LLM & MCP - NEW
    "openai>=1.3.0",
    "mcp>=0.1.0",
    # Utilities
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    # Logging & Monitoring
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",
    # Git Operations
    "gitpython>=3.1.40",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = ["E501", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
